# 2021-1-exercicio-revisao-refatoracao

./: .gitignore  05_SVM_Logistica.ipynb  AlgII_tp1.ipynb  Apartamento.cpp  Apartamento.hpp  CHANGELOG.md  CMakeLists.txt  Cartório.cpp  Cartório.hpp  Casa.cpp  Casa.hpp  Cliente.cpp  Cliente.hpp  ClienteBeloHorizonte.hpp  ClienteProps.hpp  Cobertura.cpp  Cobertura.hpp  Cópia_de_Cópia_de_ibd_tp_01.ipynb  DadosComodos.hpp  DadosValorArea.hpp  Entrega PDS2.txt  Historico.cpp  Historico.hpp  Imoveis.cpp  Imoveis.hpp  Imovel.cpp  Imovel.hpp  ImovelProps.hpp  MAKEFILE  Makefile  Mudanças.txt  Pessoa.cpp  Pessoa.hpp  README.md  Relatorio.cpp  Relatorio.hpp  ResumoGeral.cpp  ResumoGeral.hpp  Sistema.hpp  Teste PDS2.txt  (+21 more)
Entities/Imovel/: Imovel.cpp  Imovel.hpp
Entities/Pessoa/: Pessoa.cpp  Pessoa.hpp
Include/: Apartamento.hpp  Casa.hpp  Cliente.hpp  Cobertura.hpp  Imovel.hpp
Models/Imovel/: Imovel.hpp
Models/Pessoa/: Pessoa.cpp  Pessoa.hpp
dep/: TesteDep
headers/: Apartamento.hpp  Casa.hpp  Cliente.hpp  Cobertura.hpp  Imovel.hpp
include/: Apartamento.hpp  Cartorio.hpp  Casa.hpp  Cliente.hpp  Cobertura.hpp  CountingFeatures.hpp  DadosComodos.hpp  DadosValorArea.hpp  Imovel.hpp  Relatorio.hpp  Utilitarios.hpp  cria_cliente.hpp  cria_imovel.hpp
includes/: Cliente.hpp  Imovel.hpp
lib/: Corretora
src/: Apartamento.cpp  Casa.cpp  Cliente.cpp  Cobertura.cpp  DadosComodos.cpp  DadosValorArea.cpp  Historico.cpp  Imovel.cpp  Imovel.hpp  Relatorio.cpp  Utilitarios.cpp  apartamento.cpp  casa.cpp  cobertura.cpp  cria_cliente.cpp  cria_imovel.cpp  imovel.cpp  main.cpp
(+75 files in other folders)
