cmake_minimum_required(VERSION 3.20.5)
project(main)
set(CMAKE_CXX_STANDARD 17)
add_executable(${PROJECT_NAME} ./src/main.cpp ./src/Clientes/Cliente.cpp ./src/Imoveis/Imovel.cpp ./src/Relatorios/Relatorio.cpp)
target_include_directories(main SYSTEM PRIVATE $ENV{INCLUDE} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/Imoveis PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/Clientes PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/Relatorios)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
